2009-01-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DropDownBox.cs:
	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs: Optimized the quick
	class browser, update was too expensive speed wise.
The quick class
	browser dropdown is now a custom control.

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.SourceEditor.GotoLineNumberWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.MarkerPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	Updated.

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implemented SearchNext
	in the document interator. Fixes a performance issue (the default
	implementations makes multiple calls to MoveAhead, which go through
	all the remoting chaing).

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: In DocumentTextIterator,
	the first call to MoveAhead must initialize the offset. Fixes bug
	#460627 - Find In Files doesn't find all matches.

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed issue with 0
	length documents.

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed possible array
	index out of bound exception.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: handled unlikly null
	ref.

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed "Bug 465222 -
	"Insert matching brace" - no newlines please!".
